# auto-deploy-stores

./: README.md  pyproject.toml
auto_deploy_stores.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/: __init__.py  main.py
cli/commands/: __init__.py  build.py  credentials.py  deploy.py  init_project.py  status.py  submit.py  wrap.py
cli/utils/: __init__.py  assets.py  config.py  credentials.py  eas.py  template_engine.py
github_actions/: mobile-deploy.yml
mcp_server/: main.py
scripts/: setup_vault.py
tests/test_cli/: test_config.py
tests/test_vault/: test_credentials.py
vault/data/: google_service_account.json
vault/keys/: google_service_account.enc
wrapper/scripts/: init.sh
wrapper/template/: App.tsx
